# micro-language-model

./: .gitignore  pyproject.toml  requirements.txt
docs/: TRANSFORMER_DEEP_DIVE.md
src/micro_lm/: config.py
src/micro_lm/datasets/: __init__.py  dataset.py  preprocessing.py
src/micro_lm/scripts/: download_stackexchange.py
